manifests/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whereami
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whereami
  template:
    metadata:
      labels:
        app: whereami
    spec:
      containers:
        - name: whereami
          image: image-registry.openshift-image-registry.svc:5000/whereami/whereami:latest
          ports:
            - containerPort: 8080
