manifests/app/service-node.yaml
apiVersion: v1
kind: Service
metadata:
  name: whereami-node
  labels:
    name: whereami
spec:
  type: NodePort
  ports:
    - name: flasknode
      nodePort: 31889
      port: 80
      protocol: TCP
  selector:
    app: whereami
