manifests/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whereami
  labels:
    name: whereami
spec:
  ports:
    - port: 8080
      name: flask
  selector:
    app: whereami
