manifests/app/route-globale.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: whereami-global
  labels:
    name: whereami

spec:
  host: whereami-global.mouimetlab.com
  to:
    kind: Service
    name: whereami
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
