manifests/app/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: whereami
  labels:
    name: whereami

spec:
  to:
    kind: Service
    name: whereami
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
